--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -57,18 +57,18 @@
 
 		<resources.version>3.1.0</resources.version>
 
-        <org-codehaus-mojo.version>1.6.0</org-codehaus-mojo.version>
+		<org-codehaus-mojo.version>1.6.0</org-codehaus-mojo.version>
 
 		<jep-version>3.9.0</jep-version>
 		<jep-inst-path>${project.build.directory}/jep-inst</jep-inst-path>
 		<scm.version>1.8.1</scm.version>
 		<scm.connection.jep>scm:git:https://github.com/ninia/jep.git</scm.connection.jep>
-        <scm.developerConnection.jep>scm:git:https://USERNAMEHERE@github.com/gulyx/jep.git</scm.developerConnection.jep>
+		<scm.developerConnection.jep>scm:git:https://USERNAMEHERE@github.com/gulyx/jep.git</scm.developerConnection.jep>
 		<scm.url.jep>https://github.com/ninia/jep/tree/v3.9.0</scm.url.jep>
 		<scm.scmVersion.jep>master</scm.scmVersion.jep>
-        <scm.checkoutDirectory.jep>${project.build.directory}/jep</scm.checkoutDirectory.jep>
-        <python.target.resource>${project.build.outputDirectory}/python</python.target.resource>
-		
+		<scm.checkoutDirectory.jep>${project.build.directory}/jep</scm.checkoutDirectory.jep>
+		<python.target.resource>${project.build.outputDirectory}/python</python.target.resource>
+
 	</properties>
 
 	<dependencies>
@@ -94,33 +94,31 @@
 	</dependencies>
 
 	<scm>
-    	<connection>${scm.connection.jep}</connection>
-<!--     	<developerConnection>scm:git:ssh://github.com:ninia/jep.git</developerConnection> -->
-    	<url>${scm.url.jep}</url>    	
-   	</scm>
+		<connection>${scm.connection.jep}</connection>
+		<!-- <developerConnection>scm:git:ssh://github.com:ninia/jep.git</developerConnection> -->
+		<url>${scm.url.jep}</url>
+	</scm>
 
 
-	<build>	
-   		<resources>
-        	<!-- regular resource processing for everything -->
-        	<resource>
-            	<directory>src/main/resources</directory>
-        	</resource>
-        	<!-- resource for python scripts in src -->
-        	<resource>
-            	<directory>src/main/py</directory>
-            <!-- relative to target/classes
-                 i.e. ${project.build.outputDirectory} -->
-	            <targetPath>${python.target.resource}</targetPath>
-        	</resource>
-        	<!-- other resources for python scripts -->
-        	<resource>
-            	<directory>py</directory>
-            <!-- relative to target/classes
-                 i.e. ${project.build.outputDirectory} -->
-	            <targetPath>${python.target.resource}</targetPath>        	
-        	</resource>
-    	</resources>	
+	<build>
+		<resources>
+			<!-- regular resource processing for everything -->
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<!-- resource for python scripts in src -->
+			<resource>
+				<directory>src/main/py</directory>
+				<!-- relative to target/classes i.e. ${project.build.outputDirectory} -->
+				<targetPath>${python.target.resource}</targetPath>
+			</resource>
+			<!-- other resources for python scripts -->
+			<resource>
+				<directory>py</directory>
+				<!-- relative to target/classes i.e. ${project.build.outputDirectory} -->
+				<targetPath>${python.target.resource}</targetPath>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
@@ -146,117 +144,120 @@
 				</configuration>
 			</plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-scm-plugin</artifactId>
-                <version>${scm.version}</version>
-                <configuration> 
-                    <scmVersion>${scm.scmVersion.jep}</scmVersion>
-                    <scmVersionType>branch</scmVersionType>
-                    <checkoutDirectory>${scm.checkoutDirectory.jep}</checkoutDirectory>
-                    <goals>install</goals>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>scm-checkout-bootstrap</id>
-                        <goals>
-<!--                             <goal>checkout</goal> -->
-                            <goal>bootstrap</goal>
-                        </goals>
-                        <phase>compile</phase>
-                    </execution>
-                </executions>                
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>${org-codehaus-mojo.version}</version>
-                <executions>
-                   <execution>
-                        <id>build-jep</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>python</executable>
- 							<workingDirectory>${basedir}/target/jep</workingDirectory>
-                            <arguments>
-                                <argument>setup.py</argument>
-                                <argument>build</argument>
-                                 <argument>-b${jep-inst-path}</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-             </plugin>
-<!--             <plugin> -->
-<!--                 <artifactId>maven-resources-plugin</artifactId> -->
-<!--                 <version>${resources.version}</version> -->
-<!--                 <executions> -->
-<!--                     <execution> -->
-<!--                         <id>copy-library-files-in-target</id> -->
-<!--  *                        here the phase you need -->
-<!--                         <phase>compile</phase> -->
-<!--                         <goals> -->
-<!--                             <goal>copy-resources</goal> -->
-<!--                         </goals> -->
-<!--                         <configuration> -->
-<!--                             <outputDirectory>${basedir}/target/foo</outputDirectory> -->
-<!--                             <resources>           -->
-<!--                                 <resource> -->
-<!-- *                                    <directory>${scm.checkoutDirectory.jep}</directory> -->
-<!--                                     <directory>${jep-inst-path}</directory> -->
-<!--                                     <includes> -->
-<!--                                         <include>**/jep*.jar</include> -->
-<!--                                         <include>**/jep*.so</include> -->
-<!--                                         <include>**/jep*.dll</include> -->
-<!--                                     </includes> -->
-<!--                                     <filtering>true</filtering> -->
-<!--                                 </resource> -->
-<!--                             </resources>               -->
-<!--                         </configuration>             -->
-<!--                     </execution> -->
-<!--             	</executions> -->
-<!--             </plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-scm-plugin</artifactId>
+				<version>${scm.version}</version>
+				<configuration>
+					<scmVersion>${scm.scmVersion.jep}</scmVersion>
+					<scmVersionType>branch</scmVersionType>
+					<checkoutDirectory>${scm.checkoutDirectory.jep}</checkoutDirectory>
+					<goals>install</goals>
+				</configuration>
+				<executions>
+					<execution>
+						<id>scm-checkout-bootstrap</id>
+						<goals>
+							<!-- <goal>checkout</goal> -->
+							<goal>bootstrap</goal>
+						</goals>
+						<phase>compile</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>${org-codehaus-mojo.version}</version>
+				<executions>
+					<execution>
+						<id>build-jep</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>python</executable>
+							<workingDirectory>${basedir}/target/jep</workingDirectory>
+							<arguments>
+								<argument>setup.py</argument>
+								<argument>build</argument>
+								<argument>-b${jep-inst-path}</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- <plugin> -->
+			<!-- <artifactId>maven-resources-plugin</artifactId> -->
+			<!-- <version>${resources.version}</version> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <id>copy-library-files-in-target</id> -->
+			<!-- * here the phase you need -->
+			<!-- <phase>compile</phase> -->
+			<!-- <goals> -->
+			<!-- <goal>copy-resources</goal> -->
+			<!-- </goals> -->
+			<!-- <configuration> -->
+			<!-- <outputDirectory>${basedir}/target/foo</outputDirectory> -->
+			<!-- <resources> -->
+			<!-- <resource> -->
+			<!-- * <directory>${scm.checkoutDirectory.jep}</directory> -->
+			<!-- <directory>${jep-inst-path}</directory> -->
+			<!-- <includes> -->
+			<!-- <include>**/jep*.jar</include> -->
+			<!-- <include>**/jep*.so</include> -->
+			<!-- <include>**/jep*.dll</include> -->
+			<!-- </includes> -->
+			<!-- <filtering>true</filtering> -->
+			<!-- </resource> -->
+			<!-- </resources> -->
+			<!-- </configuration> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- </plugin> -->
 
-      <plugin>
-        <groupId>com.coderplus.maven.plugins</groupId>
-        <artifactId>copy-rename-maven-plugin</artifactId>
-        <version>1.0</version>
-        <executions>
-          <execution>
-            <id>copy-file</id>
-<!--             <phase>generate-sources</phase> -->
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <sourceFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/jep.so</sourceFile>
-              <destinationFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/libjep.so</destinationFile>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+			<plugin>
+				<groupId>com.coderplus.maven.plugins</groupId>
+				<artifactId>copy-rename-maven-plugin</artifactId>
+				<version>1.0</version>
+				<executions>
+					<execution>
+						<id>copy-file</id>
+						<!-- <phase>generate-sources</phase> -->
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<sourceFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/jep.so</sourceFile>
+							<destinationFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/libjep.so</destinationFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-<!--         <version>3.0.0-M4</version> -->
-        				<executions>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<!-- <version>3.0.0-M4</version> -->
+				<executions>
 					<execution>
 						<goals>
 							<goal>test</goal>
 						</goals>
 					</execution>
 				</executions>
-        <configuration>
+				<configuration>
+					<systemPropertyVariables>
+						<propertyName>java.library.path</propertyName>
+					</systemPropertyVariables>
 					<argLine>
 						-Djava.library.path=${jep-inst-path}/lib.linux-x86_64-2.7/jep/
 					</argLine>
-        </configuration>
-      </plugin>
+				</configuration>
+			</plugin>
 
 		</plugins>
 	</build>
