Changed the phase of the plugin execution "copy-jep.so-file"

--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -224,9 +224,10 @@
 				<version>1.0</version>
 				<executions>
 					<execution>
-						<id>copy-file</id>
+						<id>copy-jep.so-file</id>
 						<!-- <phase>generate-sources</phase> -->
-						<phase>prepare-package</phase>
+						<!-- <phase>prepare-package</phase> -->
+						<phase>compile</phase>
 						<goals>
 							<goal>copy</goal>
 						</goals>
