Added install argument to "build-jep"

--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -182,6 +182,7 @@
 							<arguments>
 								<argument>setup.py</argument>
 								<argument>build</argument>
+								<argument>install</argument>
 								<argument>-b${jep-inst-path}</argument>
 							</arguments>
 						</configuration>
