Prepared pom in order to locally install jep (but these step are still commented for the moment)

--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -183,6 +183,8 @@
 								<argument>setup.py</argument>
 								<argument>build</argument>
 								<argument>-b${jep-inst-path}</argument>
+<!-- 								<argument>install</argument> -->
+<!-- REMOVE THE ****								<argument>-****-user</argument> -->
 							</arguments>
 						</configuration>
 					</execution>
