--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -93,11 +93,11 @@
 
 	</dependencies>
 
-	<scm>
-		<connection>${scm.connection.jep}</connection>
-		<!-- <developerConnection>scm:git:ssh://github.com:ninia/jep.git</developerConnection> -->
-		<url>${scm.url.jep}</url>
-	</scm>
+<!-- 	<scm> -->
+<!-- 		<connection>${scm.connection.jep}</connection> -->
+<!-- *		 <developerConnection>scm:git:ssh://github.com:ninia/jep.git</developerConnection> -->
+<!-- 		<url>${scm.url.jep}</url> -->
+<!-- 	</scm> -->
 
 
 	<build>
@@ -144,32 +144,50 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-scm-plugin</artifactId>
-				<version>${scm.version}</version>
-				<configuration>
-					<scmVersion>${scm.scmVersion.jep}</scmVersion>
-					<scmVersionType>branch</scmVersionType>
-					<checkoutDirectory>${scm.checkoutDirectory.jep}</checkoutDirectory>
-					<goals>install</goals>
-				</configuration>
-				<executions>
-					<execution>
-						<id>scm-checkout-bootstrap</id>
-						<goals>
-							<!-- <goal>checkout</goal> -->
-							<goal>bootstrap</goal>
-						</goals>
-						<phase>compile</phase>
-					</execution>
-				</executions>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 				<artifactId>maven-scm-plugin</artifactId> -->
+<!-- 				<version>${scm.version}</version> -->
+<!-- 				<configuration> -->
+<!-- 					<scmVersion>${scm.scmVersion.jep}</scmVersion> -->
+<!-- 					<scmVersionType>branch</scmVersionType> -->
+<!-- 					<checkoutDirectory>${scm.checkoutDirectory.jep}</checkoutDirectory> -->
+<!-- 					<goals>install</goals> -->
+<!-- 				</configuration> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>scm-checkout-bootstrap</id> -->
+<!-- 						<goals> -->
+<!-- * 							<goal>checkout</goal> -->
+<!-- 							<goal>bootstrap</goal> -->
+<!-- 						</goals> -->
+<!-- 						<phase>compile</phase> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>${org-codehaus-mojo.version}</version>
 				<executions>
+<!-- 					<execution> -->
+<!-- 						<id>build-jep</id> -->
+<!-- 						<phase>compile</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>exec</goal> -->
+<!-- 						</goals> -->
+<!-- 						<configuration> -->
+<!-- 							<executable>python</executable> -->
+<!-- 							<workingDirectory>${basedir}/target/jep</workingDirectory> -->
+<!-- 							<arguments> -->
+<!-- 								<argument>setup.py</argument> -->
+<!-- 								<argument>build</argument> -->
+<!-- 								<argument>-b${jep-inst-path}</argument> -->
+<!-- * 								<argument>install</argument> -->
+<!-- * REMOVE THE ****								<argument>-****-user</argument> -->
+<!-- 							</arguments> -->
+<!-- 						</configuration> -->
+<!-- 					</execution> -->
 					<execution>
 						<id>build-jep</id>
 						<phase>compile</phase>
@@ -177,14 +195,16 @@
 							<goal>exec</goal>
 						</goals>
 						<configuration>
-							<executable>python</executable>
-							<workingDirectory>${basedir}/target/jep</workingDirectory>
+							<executable>pip</executable>
+<!-- 							<workingDirectory>${basedir}/target/xxhash</workingDirectory> -->
 							<arguments>
-								<argument>setup.py</argument>
-								<argument>build</argument>
-								<argument>-b${jep-inst-path}</argument>
-<!-- 								<argument>install</argument> -->
-<!-- REMOVE THE ****								<argument>-****-user</argument> -->
+								<argument>install</argument>
+<!-- 								<argument>-b${basedir}/target/xxhash</argument> -->
+<!-- 								<argument>- -prefix=${jep-inst-path}</argument> -->
+								<argument>--system</argument>
+								<argument>-b${basedir}/target/jep</argument>
+								<argument>-t${jep-inst-path}/lib.linux-x86_64-2.7</argument>
+								<argument>jep</argument>
 							</arguments>
 						</configuration>
 					</execution>
@@ -240,26 +260,26 @@
 			<!-- </executions> -->
 			<!-- </plugin> -->
 
-			<plugin>
-				<groupId>com.coderplus.maven.plugins</groupId>
-				<artifactId>copy-rename-maven-plugin</artifactId>
-				<version>1.0</version>
-				<executions>
-					<execution>
-						<id>copy-jep.so-file</id>
-						<!-- <phase>generate-sources</phase> -->
-						<!-- <phase>prepare-package</phase> -->
-						<phase>compile</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<sourceFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/jep.so</sourceFile>
-							<destinationFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/libjep.so</destinationFile>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>com.coderplus.maven.plugins</groupId> -->
+<!-- 				<artifactId>copy-rename-maven-plugin</artifactId> -->
+<!-- 				<version>1.0</version> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>copy-jep.so-file</id> -->
+<!-- 						<phase>generate-sources</phase> -->
+<!-- 						<phase>prepare-package</phase> -->
+<!-- 						<phase>compile</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>copy</goal> -->
+<!-- 						</goals> -->
+<!-- 						<configuration> -->
+<!-- 							<sourceFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/jep.so</sourceFile> -->
+<!-- 							<destinationFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/libjep.so</destinationFile> -->
+<!-- 						</configuration> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
