--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -205,7 +205,7 @@
 								<argument>install</argument>
 <!-- 								<argument>-b${basedir}/target/xxhash</argument> -->
 <!-- 								<argument>- -prefix=${jep-inst-path}</argument> -->
-<!-- 								<argument>- -system</argument> -->
+								<argument>--system</argument>
 								<argument>-b${jep-path}</argument>
 								<argument>-t${jep-inst-path}</argument>
 								<argument>jep</argument>
