Enabled OpenJDK 8 in TRAVIS-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ dist: bionic
 # dist: trusty
 language: java
 jdk:
-    - oraclejdk8
+    - openjdk8
+#    - oraclejdk8
 ##script: bash build --debug
 script: mvn clean install 
 # We need to avoid sudo for caching on Travis
