--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ dist: xenial
 language: java
 jdk:
 #    - openjdk9
-    - oraclejdk8
+#    - oraclejdk8
+    - openjdk8
 ##script: bash build --debug
 script: mvn clean install 
 # We need to avoid sudo for caching on Travis
