--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ dist: bionic
 # dist: xenial
 # dist: trusty
 language: java
-jdk:
+# jdk:
 #    - openjdk9
 #    - oraclejdk8
-    - openjdk8
+#    - openjdk8
 ##script: bash build --debug
 script: mvn clean install 
 # We need to avoid sudo for caching on Travis
@@ -22,6 +22,7 @@ addons:
             - build-essential
             - sed
             - python-pip
+            - openjdk-8-jdk
     
 cache:
     directories:
