Changed JAVAHOME in order to point to openJDK8

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ dist: bionic
 # dist: xenial
 # dist: trusty
 language: java
-# jdk:
-#    - openjdk9
+jdk:
+    - openjdk9
 #    - oraclejdk8
 #    - openjdk8
 ##script: bash build --debug
@@ -29,7 +29,8 @@ cache:
         - $HOME/.m2
 
 before_script:
-    - export JAVA_HOME=`dirname $(dirname $(readlink -f $(which javac)))`
+#    - export JAVA_HOME=`dirname $(dirname $(readlink -f $(which javac)))`
+    - export JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64/"
     - export MAVEN_SKIP_RC=true
     - export MAVEN_OPTS="-Xms1024m -Xmx2g -XX:MaxPermSize=512m"
 
