Diabled default JDK for bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 dist: bionic
 # dist: xenial
 # dist: trusty
-language: java
-jdk:
-    - openjdk9
+# language: java
+# jdk:
+#    - openjdk9
 #    - oraclejdk8
 #    - openjdk8
 ##script: bash build --debug
