--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ cache:
         - $HOME/.m2
 
 before_script:
+    -  pip --version
 #    - export JAVA_HOME=`dirname $(dirname $(readlink -f $(which javac)))`
     - export JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64/"
     - export MAVEN_SKIP_RC=true
