--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,14 @@ addons:
             - maven
             - build-essential
             - sed
-            - python-pip
+#            - python-pip
 #            - openjdk-8-jdk
-    
+
+language: python
+python:
+  - "2.7"
+script: pytest
+  
 cache:
     directories:
         - $HOME/.m2
