--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -52,6 +52,7 @@
 		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
 		<maven-compiler-plugin.sourcesVersion>1.8</maven-compiler-plugin.sourcesVersion>
 		<maven-compiler-plugin.targetVersion>1.8</maven-compiler-plugin.targetVersion>
+		<maven-surefire.version>3.0.0-M4</maven-surefire.version>
 
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 
@@ -64,13 +65,6 @@
 		<xxhash-path>${project.build.directory}/xxhash</xxhash-path>		
 		<jep-inst-path>${project.build.directory}/jep-inst</jep-inst-path>
 		
-<!-- 		<scm.version>1.8.1</scm.version> -->
-<!-- 		<scm.connection.jep>scm:git:https://github.com/ninia/jep.git</scm.connection.jep> -->
-<!-- 		<scm.developerConnection.jep>scm:git:https://USERNAMEHERE@github.com/gulyx/jep.git</scm.developerConnection.jep> -->
-<!-- 		<scm.url.jep>https://github.com/ninia/jep/tree/v3.9.0</scm.url.jep> -->
-<!-- 		<scm.scmVersion.jep>master</scm.scmVersion.jep> -->
-<!-- 		<scm.checkoutDirectory.jep>${project.build.directory}/jep</scm.checkoutDirectory.jep> -->
-
 		<python.target.resource>${project.build.outputDirectory}/python</python.target.resource>
 
 	</properties>
@@ -96,13 +90,6 @@
 		</dependency>
 
 	</dependencies>
-
-<!-- 	<scm> -->
-<!-- 		<connection>${scm.connection.jep}</connection> -->
-<!-- *		 <developerConnection>scm:git:ssh://github.com:ninia/jep.git</developerConnection> -->
-<!-- 		<url>${scm.url.jep}</url> -->
-<!-- 	</scm> -->
-
 
 	<build>
 		<resources>
@@ -148,50 +135,11 @@
 				</configuration>
 			</plugin>
 
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-scm-plugin</artifactId> -->
-<!-- 				<version>${scm.version}</version> -->
-<!-- 				<configuration> -->
-<!-- 					<scmVersion>${scm.scmVersion.jep}</scmVersion> -->
-<!-- 					<scmVersionType>branch</scmVersionType> -->
-<!-- 					<checkoutDirectory>${scm.checkoutDirectory.jep}</checkoutDirectory> -->
-<!-- 					<goals>install</goals> -->
-<!-- 				</configuration> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>scm-checkout-bootstrap</id> -->
-<!-- 						<goals> -->
-<!-- * 							<goal>checkout</goal> -->
-<!-- 							<goal>bootstrap</goal> -->
-<!-- 						</goals> -->
-<!-- 						<phase>compile</phase> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>${org-codehaus-mojo.version}</version>
 				<executions>
-<!-- 					<execution> -->
-<!-- 						<id>build-jep</id> -->
-<!-- 						<phase>compile</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>exec</goal> -->
-<!-- 						</goals> -->
-<!-- 						<configuration> -->
-<!-- 							<executable>python</executable> -->
-<!-- 							<workingDirectory>${basedir}/target/jep</workingDirectory> -->
-<!-- 							<arguments> -->
-<!-- 								<argument>setup.py</argument> -->
-<!-- 								<argument>build</argument> -->
-<!-- 								<argument>-b${jep-inst-path}</argument> -->
-<!-- * 								<argument>install</argument> -->
-<!-- * REMOVE THE ****								<argument>-****-user</argument> -->
-<!-- 							</arguments> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
 					<execution>
 						<id>build-jep</id>
 						<phase>compile</phase>
@@ -205,6 +153,7 @@
 								<argument>install</argument>
 <!-- 								<argument>-b${basedir}/target/xxhash</argument> -->
 <!-- 								<argument>- -prefix=${jep-inst-path}</argument> -->
+<!-- About the next line please consider ISSUE#17  on GitHub at: https://github.com/IASI-SAKS/groucho/issues/17-->
 <!-- 								<argument>-REMOVE_THIS_SPACE-system</argument> -->
 								<argument>-b${jep-path}</argument>
 								<argument>-t${jep-inst-path}</argument>
@@ -225,6 +174,7 @@
 								<argument>install</argument>
 <!-- 								<argument>-b${basedir}/target/xxhash</argument> -->
 <!-- 								<argument>- -prefix=${jep-inst-path}</argument> -->
+<!-- About the next line please consider ISSUE#17  on GitHub at: https://github.com/IASI-SAKS/groucho/issues/17-->
 <!-- 								<argument>-REMOVE_THIS_SPACE-system</argument> -->
 								<argument>-b${xxhash-path}</argument>
 								<argument>-t${jep-inst-path}</argument>
@@ -234,61 +184,11 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- <plugin> -->
-			<!-- <artifactId>maven-resources-plugin</artifactId> -->
-			<!-- <version>${resources.version}</version> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <id>copy-library-files-in-target</id> -->
-			<!-- * here the phase you need -->
-			<!-- <phase>compile</phase> -->
-			<!-- <goals> -->
-			<!-- <goal>copy-resources</goal> -->
-			<!-- </goals> -->
-			<!-- <configuration> -->
-			<!-- <outputDirectory>${basedir}/target/foo</outputDirectory> -->
-			<!-- <resources> -->
-			<!-- <resource> -->
-			<!-- * <directory>${scm.checkoutDirectory.jep}</directory> -->
-			<!-- <directory>${jep-inst-path}</directory> -->
-			<!-- <includes> -->
-			<!-- <include>**/jep*.jar</include> -->
-			<!-- <include>**/jep*.so</include> -->
-			<!-- <include>**/jep*.dll</include> -->
-			<!-- </includes> -->
-			<!-- <filtering>true</filtering> -->
-			<!-- </resource> -->
-			<!-- </resources> -->
-			<!-- </configuration> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
-
-<!-- 			<plugin> -->
-<!-- 				<groupId>com.coderplus.maven.plugins</groupId> -->
-<!-- 				<artifactId>copy-rename-maven-plugin</artifactId> -->
-<!-- 				<version>1.0</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>copy-jep.so-file</id> -->
-<!-- 						<phase>generate-sources</phase> -->
-<!-- 						<phase>prepare-package</phase> -->
-<!-- 						<phase>compile</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>copy</goal> -->
-<!-- 						</goals> -->
-<!-- 						<configuration> -->
-<!-- 							<sourceFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/jep.so</sourceFile> -->
-<!-- 							<destinationFile>${jep-inst-path}/lib.linux-x86_64-2.7/jep/libjep.so</destinationFile> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<!-- <version>3.0.0-M4</version> -->
+				<!-- <version>${maven-surefire.version}</version> -->
 				<executions>
 					<execution>
 						<goals>
